--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "dependencies": {
     "graphql": "^16.9.0",
     "graphql-request": "^7.1.0",
-    "next": "14.2.11",
+    "next": "^14.2.11",
     "react": "^18",
     "react-dom": "^18"
   },
