--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "next": "^14.2.11",
     "react": "^18",
     "react-dom": "^18",
+    "react-router-dom": "^6.26.2",
     "sharp": "^0.33.5"
   },
   "devDependencies": {
